07-advanced-operations-lab/assets/resources/old/nginx-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-blue
  labels:
    app.kubernetes.io/name: nginx-blue
    app.kubernetes.io/part-of: nginx-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-blue
      app.kubernetes.io/part-of: nginx-blue
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-blue
        app.kubernetes.io/part-of: nginx-blue
    spec:
      containers:
      - name: nginx-blue
        image: nginxdemos/hello:0.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-blue
  labels:
    app.kubernetes.io/name: nginx-blue
    app.kubernetes.io/part-of: nginx-blue
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: nginx-blue
    app.kubernetes.io/part-of: nginx-blue
